# ffvademo

./: .gitignore  CMakeLists.txt  build_arm64.sh  build_x86.sh  cross.cmake
example/: CMakeLists.txt  zntk_ar.cpp
inc/: vafastplayer.h
src/: egl_compat.h  ffvadecoder.cpp  ffvademo.c  ffvarenderer.c  ffvarenderer.h  ffvarenderer_egl.cpp  ffvarenderer_egl.cpp.2  ffvarenderer_priv.h  ffvarenderer_x11.c  vafastplayer.c  vafastplayer.h
src/libfcav/: CMakeLists.txt  avRxCtrl.c  ctlCam.h  fcBrowse.h  fcReceiver.cpp  fcReceiver.h  fcUtils.h  remoteSetup.h  rwInit.c  rwWrReg.c  ulib.c  ulib.h  ulibuser.h
